--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "nodemon": "^3.0.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0"
   }
 }
