--- a/fly.toml
+++ b/fly.toml
@@ -14,7 +14,7 @@ PLAYER_INFO_URL="http://api.football-data.org/v4/persons{id}"
 
 
 [http_service]
-  internal_port = "3000"
+  internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
