--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
